(WIP)Quellcode bsp. gut lesbar einbinden.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -21,6 +21,7 @@ format:
     header-includes:
       - \usepackage{pst-barcode} 
       - \usepackage[babel, german=quotes]{csquotes}
+      - \usepackage{showexpl}
     keep-tex: true
     template: reporting.tex
     
